# program_study

./: .gitignore
cgal_study/: CMakeLists.txt  Fuzzy_sphere_stackoverflow.cpp  MyKernel.cpp  MyKernel.h  array_convex_hull_2.cpp  convex_hull_3d.cpp  convex_hull_3d_dynamic.cpp  diff_wall_points_test.cpp  distance.cpp  example1.cpp  example2.cpp  example3.cpp  example3_6_1.cpp  example3_6_2.cpp  example3_6_3.cpp  example3_7.cpp  example3_8.cpp  example3_9.cpp  example4_fuzzy_range_query.cpp  indexTreeTest.cpp  iso_rectangle_2_query.cpp  line_triangle_intersect.cpp  my_range_query.cpp  my_range_query_add_index.cpp  point_location_2D.cpp  points_and_segment.cpp  surprising.cpp  timer.cpp  treeCacheTest.cpp  treeTest.cpp  vector_convex_hull.cpp
cmake_study/demo_complex/: CMakeLists.txt  HelloWorld.cpp  sampleConfig.h.in
cmake_study/demo_complex/cmake/: Macros.cmake  findADD.cmake  findFOO.cmake
cmake_study/demo_complex/myLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GPU_Development_Tools.sln  MY_LIB.sln  cmake_install.cmake  mylib.cpp  mylib.vcxproj  mylib.vcxproj.filters
cmake_study/demo_complex/projectSub1/: CMakeLists.txt  cmake_install.cmake
cmake_study/demo_define_macro/: CMakeLists.txt  main.cpp
cuda study files/__const__&__device__ vars/: 1.cu
cuda study files/cuda_files/: CpuSort.cu  constMem.cu  cu.py  cupy_Raw_CUDA.py  saxpy.cu  shfl_sync.cu  symbolAddress.cu
eigen_study/Map_Matrix/: Map_Matrix.sln
eigen_study/Map_Matrix/Map_Matrix/: Map_Matrix.vcxproj  源.cpp
eigen_study/Map_Matrix/Map_Matrix/x64/Debug/: Map_Matrix.exe.recipe  Map_Matrix.ilk  vc143.idb
eigen_study/Map_Matrix/Map_Matrix/x64/Debug/Map_Matrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Map_Matrix.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
openmp_study/cl_openmp_demo/: cpp_compiler_options_openmp.cpp  readme.txt
openmp_study/cmake_with_openmp/: CMakeLists.txt
openmp_study/gcc_demo_1/: OMP_hello.c  readme.txt
openmp_study/vs_with_openmp/: vs_with_openmp.sln
openmp_study/vs_with_openmp/vs_with_openmp/: vs_with_openmp.vcxproj  源.cpp
openmp_study/vs_with_openmp/vs_with_openmp/x64/Debug/: vc143.idb  vs_with_openmp.exe.recipe  vs_with_openmp.ilk
optix/OptiX_Apps/OptiX_Apps-master/apps/GLTF_renderer/: Light.h
optix/optix7course_by_ingowald/optix7course-master/example02_pipelineAndRayGen/: CUDABuffer.h  SampleRenderer.cpp
optix/optix7course_by_ingowald/optix7course-master/example06_multipleObjects/: CMakeLists.txt  CUDABuffer.h  SampleRenderer.cpp  SampleRenderer.h
optix/optix7course_by_ingowald/optix7course-master/example10_softShadows/: LaunchParams.h  SampleRenderer.cpp  devicePrograms.cu  main.cpp
optix/optix7course_by_ingowald/optix7course-master/pointLocation/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h
optix/optix_course_puluomiyuhun/PL_Tracer-main/: Material_def.h  Model.h  MyInteraction.h  MyMaterial.h  MyShader.c  MyTool.h  PostProcessing.h
optix/ray_trace/: CMakeLists.txt
optix/ray_trace/Release/: output.ppm  output_translated.ppm
optix/ray_trace/optixConsole/: optixConsole.vcxproj
optix/ray_trace/optixDynamicGeometry/: optixDynamicGeometry.cpp
optix/ray_trace/optixHello/: draw_solid_color.cu  optixHello.h
optix/ray_trace/optixPointLocation/: CMakeLists.txt  optixPointLocation.cpp  optixPointLocation.cu
optix/ray_trace/optixTriangle/: optixTriangle.cpp  optixTriangle.cu  optixTriangle.h
tecio_study/demo_1/: CMakeLists.txt
tecio_study/demo_1/tecio/include/: ClassMacros.h  ItemAddress.h  MASTER.h  MacroDebuggerInterface.h  StandardIntegralTypes.h  TECGUI.h  TECUTILO.h  TECUTILQ.h  TECUTILS.h  TecUtilMainWindow.h  TecUtilQuery.h  ThirdPartyHeadersBegin.h  ThirdPartyHeadersEnd.h
tecio_study/demo_1/tecio/include/szl/: VarSubzoneQueryInterface.h  ZoneVarIDQueryInterface.h
tecio_study/demo_1/tecio/include/toolbox/: RawArray.h  Set.h  StyleValue.h
tecio_study/demo_1/tecio/lib/: teciompi.lib
tecio_study/demo_2/: CMakeLists.txt  polyhedral.cpp
tecio_study/examples/OneraM6wing/: ArbitraryPoints.txt
tecio_study/examples/OneraM6wing/finallayouts/: ExternalFlowVideo1.lay  ExternalFlowVideo2.lay  ExternalFlowVideo4.lay
tecio_study/examples/OneraM6wing/macros/: CpPlot_Demo.mcr  CpPlot_Recorded.mcr
tecio_study/examples/SimpleData/: 3ElementWing.lpk  CircularContour.plt  CustomLabels.lay  CustomLabels.plt  DownDraft.plt  DuctFlow.lay  DuctFlow.plt  Eddy.plt  F18.lay  F18.plt  HeatExchanger.plt  IndependentDependent.lpk  Pyramid.plt  RainierElevation.lay  RainierElevation.plt  SpaceShip.lpk  Sphere.lpk  SunSpots.lay  SunSpots.plt  VortexShedding.sty
tecio_study/examples/brick/: brick.sln  brick.vcxproj
tecio_study/examples/brickpartitioned/: Makefile  brickpartitioned.cpp  brickpartitioned.sln  brickpartitioned.vcxproj  brickpartitionedf90.F90  brickpartitionedf90.sln  brickpartitionedf90.vfproj
tecio_study/examples/comtest/: comtest.sln  comtest.vcxproj  comtestf.sln
tecio_study/examples/faceneighbors/: faceneighbors.vcxproj
tecio_study/examples/faceneighbors/x64/Debug/: faceneighbors.exe.recipe  faceneighbors.ilk  faceneighbors.vcxproj.FileListAbsolute.txt  vc143.idb
tecio_study/examples/flushpartitioned/: flushpartitioned.sln  flushpartitioned.vcxproj
tecio_study/examples/gridsolution/: gridsolution.sln  gridsolution.vcxproj
tecio_study/examples/icosahedrons/: icosahedrons.sln  icosahedrons.vcxproj
tecio_study/examples/ijkpartitioned/: ijkpartitioned.sln  ijkpartitioned.vcxproj
tecio_study/tecio/include/: ADKUTIL.h  CodeContract.h  GLOBAL.h  RAWPTR.h  SV.h  TASSERT.h  TECGLBL.h  TECUTILM.h  TecUtilDialog.h  TecUtilEvents.h  TecUtilHelp.h  TecUtilMenuAction.h  TecplotMinorRev.h  TecplotVersion.h
tecio_study/tecio/include/szl/: CellConnectivityQueryInterface.h  LoaderInterface.h  NodeConnectivityQueryInterface.h  OrderedSubzoneQueryInterface.h  VarValueQueryInterface.h
tecio_study/tecio/include/toolbox/: ArgList.h  StateChangeNotifier.h
tecio_study/tecio/lib/: tecio.lib
(+22 files in other folders)
